--- a/css/style.css
+++ b/css/style.css
@@ -97,4 +97,13 @@
       margin-left: 25%;
       width: 75%;
   }
+  .hide-small-screen{
+    display: none;
   }
+  }
+  @media (max-width:767px){
+    .logo{
+      display: none;
+    } 
+  }
+  
